{{$NEXT}}

1.112600  2011-09-17 14:17:44 Europe/London

  * Set quotemeta when stripping command from returned output (V. Foitzik)

1.112190  2011-08-07 21:33:07 Europe/London

  * use_net_telnet_connection is checked even on Win32
  * make add_library actually DTRT when you want both lib and add_lib

1.111590  2011-06-08 23:26:09 Europe/London

  * Support more SSH transport options, handle username

1.111530  2011-06-02 23:44:29 Europe/London

  * Support multi match in macros
  * Remove is_lazy - always update the prompt
  * Phrasebook fixes for Net::Appliance::Session

1.111500  2011-05-30 16:00:03 Europe/London

  * New cross platform backend (IPC::Run or Net::Telnet)

1.111150  2011-04-25 19:55:40 Europe/London

  * Cross platform support (i.e. Win32)
  * More documentation
  * Added a few minor support methods

1.110911  2011-04-01 15:09:58 Europe/London

  * Minor POD formatting typos fixed

1.110910  2011-04-01 13:04:09 Europe/London

  * Fix "private" packages scoping so that Dist::Zilla works
  * Add tutorial and cookbook POD files

1.110900  2011-03-31 14:41:17 Europe/London

  * More POD

1.110891  2011-03-30 13:16:46 Europe/London

  * More POD

1.110890  2011-03-30 13:13:48 Europe/London

  * Initial release on an unsuspecting world.