@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+  * Fixes to handling of newlines in returned response.
+    Now aggressively remove control characters, and replace all newlines with \n
+
 1.112600  2011-09-17 14:17:44 Europe/London
 
   * Set quotemeta when stripping command from returned output (V. Foitzik)
